--- a/ts-axios/package.json
+++ b/ts-axios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-axios-new",
+  "name": "ts-axios-andong",
   "version": "0.1.5",
   "description": "",
   "keywords": [],
@@ -9,10 +9,10 @@
   "files": [
     "dist"
   ],
-  "author": "ustbhuangyi <280309453@qq.com>",
+  "author": "andong <1021909498@qq.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ustbhuangyi/ts-axios"
+    "url": "https://github.com/AnDong4213/typescript/tree/master/ts-axios"
   },
   "license": "MIT",
   "engines": {
