--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ bower_components/
 .idea/
 .DS_Store
 .npm-debug.log
+.parcel-cache
 coverage/
 package-lock.json
 #ignore .project created by Hbuilder
