--- a/again-ts/v-pinia/package.json
+++ b/again-ts/v-pinia/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.13",
+    "font-awesome": "^4.7.0",
     "pinia": "^2.0.16",
     "pinia-plugin-persistedstate": "^1.6.3",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
