--- a/again-ts/10-decorator/package.json
+++ b/again-ts/10-decorator/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --watch src/ -e ts -x ts-node ./src/3/2ClassDecorator.ts",
     "dev:build": "tsc -w",
-    "dev:start":"nodemon --watch dist/teaching js --exec  node ./dist/teaching/1ClassDecorator.js",
-    "start":  "concurrently npm:dev:*",
-    "tsc":"tsc src/teaching/1ClassDecorator.ts  --target ES5 -w --experimentalDecorators"
+    "dev:start": "nodemon --watch dist/3 js --exec  node ./dist/3/1ClassDecorator.js",
+    "start": "concurrently npm:dev:*",
+    "tsc": "tsc src/3/1ClassDecorator.ts  --target ES5 -w --experimentalDecorators",
+    "ctrl": "ts-node src/controller/HomeController.ts",
+    "beginapp": "nodemon --watch src/ -e ts --exec ts-node ./src/expressapp.ts"
   },
   "keywords": [],
   "author": "",
