--- a/again-ts/10-decorator/package.json
+++ b/again-ts/10-decorator/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch src/ -e ts -x ts-node ./src/3/2ClassDecorator.ts",
+    "dev": "nodemon --watch src/ -e ts -x ts-node ./src/5/1FactoryClassDecorator.ts",
     "dev:build": "tsc -w",
     "dev:start": "nodemon --watch dist/3 js --exec  node ./dist/3/1ClassDecorator.js",
     "start": "concurrently npm:dev:*",
     "tsc": "tsc src/3/1ClassDecorator.ts  --target ES5 -w --experimentalDecorators",
     "ctrl": "ts-node src/controller/HomeController.ts",
-    "beginapp": "nodemon --watch src/ -e ts --exec ts-node ./src/expressapp.ts"
+    "beginapp": "nodemon --watch src/ -e ts --exec ts-node ./src/expressapp.ts",
+    "startparcel": "parcel ./index.html"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
   "dependencies": {
     "concurrently": "^7.4.0",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "parcel": "^2.8.3"
   }
 }
