--- a/again-ts/10-decorator/package.json
+++ b/again-ts/10-decorator/package.json
@@ -8,7 +8,7 @@
     "dev:build": "tsc -w",
     "dev:start": "nodemon --watch dist/3 js --exec  node ./dist/3/1ClassDecorator.js",
     "start": "concurrently npm:dev:*",
-    "tsc": "tsc src/3/1ClassDecorator.ts  --target ES5 -w --experimentalDecorators",
+    "tsc": "tsc src/5/1FactoryClassDecorator.ts  --target ES5 -w --experimentalDecorators",
     "ctrl": "ts-node src/controller/HomeController.ts",
     "beginapp": "nodemon --watch src/ -e ts --exec ts-node ./src/expressapp.ts",
     "startparcel": "parcel ./index.html"
