--- a/again-ts/new-2022-ts/tsconfig.json
+++ b/again-ts/new-2022-ts/tsconfig.json
@@ -93,17 +93,17 @@
     // "alwaysStrict": true, // Ensure 'use strict' is always emitted.
     // "noUnusedLocals": true,  // 在未读取本地变量时启用错误报告
     // "noUnusedParameters": true,  // 未读取函数参数时引发错误
-    // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
-    // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
-    // "noFallthroughCasesInSwitch": true,               /* Enable error reporting for fallthrough cases in switch statements. */
-    // "noUncheckedIndexedAccess": true,                 /* Add 'undefined' to a type when accessed using an index. */
-    // "noImplicitOverride": true,                       /* Ensure overriding members in derived classes are marked with an override modifier. */
-    // "noPropertyAccessFromIndexSignature": true,       /* Enforces using indexed accessors for keys declared using an indexed type. */
-    // "allowUnusedLabels": true,                        /* Disable error reporting for unused labels. */
-    // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
+    // "exactOptionalPropertyTypes": true,  // 将可选属性类型解释为写入的，而不是添加“未定义”
+    // "noImplicitReturns": true, // 为函数中未显式返回的代码路径启用错误报告
+    // "noFallthroughCasesInSwitch": true, // 为switch语句中的失败情况启用错误报告
+    // "noUncheckedIndexedAccess": true, // 使用索引访问时，将“undefined”添加到类型中
+    // "noImplicitOverride": true, // 确保用重写修饰符标记派生类中的重写成员
+    // "noPropertyAccessFromIndexSignature": true, // 对使用索引类型声明的键强制使用索引访问器
+    // "allowUnusedLabels": true,  // Disable error reporting for unused labels.
+    // "allowUnreachableCode": true,  // Disable error reporting for unreachable code.
 
     /* Completeness */
-    // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */
+    // "skipDefaultLibCheck": true,  // Skip type checking .d.ts files that are included with TypeScript.
+    "skipLibCheck": true // Skip type checking all .d.ts files.
   }
 }
