--- a/again-ts/new-2022-ts/package.json
+++ b/again-ts/new-2022-ts/package.json
@@ -7,7 +7,8 @@
     "dev:start": "nodemon --watch src/ -e ts --exec ts-node ./src/app.ts",
     "dev:parcel": "parcel --no-cache ./src/index.html",
     "start": "concurrently npm:dev:*",
-    "tsc": "tsc src/app.ts  --target ES5"
+    "tsc": "tsc src/app.ts  --target ES5",
+    "tsnode": "ts-node ./src/app.ts"
   },
   "keywords": [],
   "author": "",
